--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -13,8 +13,14 @@
 </ul>
 <br>
 <hr></hr>
-<%= link_to 'Add a review', new_restaurant_review_path(@restaurant) %>
+<h1>New review</h1>
+<%= simple_form_for [@restaurant, @review] do |f| %>
+  <%= f.input :rating %>
+  <%= f.input :content %>
+  <%= f.submit "Submit review", class: "btn btn-primary" %>
+<% end %>
 <hr></hr>
+
 <%= link_to 'Back to all the restaurants', restaurants_path %>
 
 </div>
